scores, resume, about, pizza

--- a/pizza_walkthrough.html
+++ b/pizza_walkthrough.html
@@ -6,296 +6,245 @@ title: Pizza Walkthrough Slideshow - A Step-by-step guide - The Ridiculously Tho
   <h2>
     Pizza Walkthrough Slideshow: A Step-by-step guide
   </h2>
-  <div class='walkthrough'>
-    <div id='slides'>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='pizza walkthrough' src='images/pizzas/walkthrough/34 done.jpg'>
-        </div>
-        <p>
+  <div id='walkthrough' class='carousel slide' data-ride='carousel'>
+<!--     <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol> -->
+    <div class='carousel-inner'>
+      <div class='item active'>
+        <img alt='pizza walkthrough' src='images/pizzas/walkthrough/34 done.jpg'>
+        <div class='carousel-caption'>
           This slideshow is a step-by-step guide to making a pizza
           <em>completely</em>
           from scratch,
           starting with the dough.  The featured pizza is a garlic butter,
           mozzarella cheese, Kalamata olives, vine-ripened tomatoes, and goat cheese combination on
           a thinly-stretched whole wheat crust.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='dry yeast' src='images/pizzas/walkthrough/01 dry yeast.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='dry yeast' src='images/pizzas/walkthrough/01 dry yeast.jpg'>
+        <div class='carousel-caption'>
           I start by adding a packet of dry yeast to a large bowl.  I usually
           use a full packet of yeast, regardless of the size of dough ball
           that I want to make.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='proofing' src='images/pizzas/walkthrough/02 proofing.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='proofing' src='images/pizzas/walkthrough/02 proofing.jpg'>
+        <div class='carousel-caption'>
           To prove that the yeast is alive, I add the amount of water needed (in this
           case, 3/4 cup) and a tablespoon (or so) of sugar. I then mix the ingredients
           together with a whisk. Dehydrated yeast
           has a limited shelf-life which can be extended by freezing. Some people
           don't think this step is necessary; however, I have used dead yeast
           before, and was unsatisfied with the end result.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='proofing' src='images/pizzas/walkthrough/03 proofing.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='proofing' src='images/pizzas/walkthrough/03 proofing.jpg'>
+        <div class='carousel-caption'>
           This is what the mixture of yeast, sugar, and water looks like just
           after mixing them together with a whisk.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='proven' src='images/pizzas/walkthrough/04 proven.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='proven' src='images/pizzas/walkthrough/04 proven.jpg'>
+        <div class='carousel-caption'>
           I can tell that the yeast is alive when I see clumps of material float
           to the top of the liquid, and small bubbles begin to form around those clumps.
           This usually takes around 10 minutes.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='add flour' src='images/pizzas/walkthrough/05 add flour.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='add flour' src='images/pizzas/walkthrough/05 add flour.jpg'>
+        <div class='carousel-caption'>
           Now, I add about 1/4 of the flour into
           the liquid.  Actually, I don't really measure how much flour to use here
           - when the mixture ends up with the consistency of thick pancake batter,
           it's ready for the next step.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='poolish pre' src='images/pizzas/walkthrough/06 poolish pre.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='poolish pre' src='images/pizzas/walkthrough/06 poolish pre.jpg'>
+        <div class='carousel-caption'>
           Now that I have a batter-like texture, I let the mixture sit for about 30
           minutes.  This mixture can be called 'poolish,' and the longer
           it sits out like this, the more flavor it will get.
           I only let it go for 30 minutes because I'm usually constrained
           for time (and I am an amateur, after all).
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='poolish post' src='images/pizzas/walkthrough/07 poolish post.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='poolish post' src='images/pizzas/walkthrough/07 poolish post.jpg'>
+        <div class='carousel-caption'>
           This is what the poolish looks like after resting for around a half hour.
           It's now ready for the rest of the flour.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='start dough' src='images/pizzas/walkthrough/08 start dough.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='start dough' src='images/pizzas/walkthrough/08 start dough.jpg'>
+        <div class='carousel-caption'>
           Now I add the salt and oil, and then whisk in the rest of the flour, about 1/4 cup at a time.  Well, I
           <em>start</em>
           by using the whisk, but eventually...
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='dough' src='images/pizzas/walkthrough/09 dough.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='dough' src='images/pizzas/walkthrough/09 dough.jpg'>
+        <div class='carousel-caption'>
           ...the whisk has to be put aside and the hands become involved.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='knead' src='images/pizzas/walkthrough/10 knead.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='knead' src='images/pizzas/walkthrough/10 knead.jpg'>
+        <div class='carousel-caption'>
           The dough should gradually transform from a sticky mess to a well-formed
           ball.  I knead the ball by smashing it down with my palm, folding it over
           on itself, and smashing again.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='knead' src='images/pizzas/walkthrough/11 knead.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='knead' src='images/pizzas/walkthrough/11 knead.jpg'>
+        <div class='carousel-caption'>
           If the ball sticks to my palms too much, I put a little more flour in.  I keep
           kneading until the ball is just the right consistency - it pulls itself away
           from the sides of the bowl and from my palms, but it is just a bit tacky.
           Now I'll begin the real kneading - I knead the ball for about 5 minutes, and
           let it rest about 2 minutes after that.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='knead' src='images/pizzas/walkthrough/12 knead.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='knead' src='images/pizzas/walkthrough/12 knead.jpg'>
+        <div class='carousel-caption'>
           More kneading - another 5 minutes of kneading, followed by 2 minutes of rest.  The
           rest is as much for me as it is for the dough.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='knead' src='images/pizzas/walkthrough/13 knead.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='knead' src='images/pizzas/walkthrough/13 knead.jpg'>
+        <div class='carousel-caption'>
           Even more kneading. I will knead the dough for at least 15 minutes.
           Sometimes I use a mixer - but I prefer to use
           my hands when I'm not making large batches of dough. I find it easier
           to feel when the dough is ready for the next step.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='dough ball' src='images/pizzas/walkthrough/15 dough ball.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='dough ball' src='images/pizzas/walkthrough/15 dough ball.jpg'>
+        <div class='carousel-caption'>
           Now the ball is ready for the yeast to do its thing.  I cover the ball in a very
           thin layer of olive oil to keep it from drying out. I cover the bowl with
           plastic wrap, again to keep the ball from drying out.  The whole
           thing goes into my refrigerator overnight.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='dough has risen' src='images/pizzas/walkthrough/18 dough has risen.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='dough has risen' src='images/pizzas/walkthrough/18 dough has risen.jpg'>
+        <div class='carousel-caption'>
           Here's what the ball looks like after sitting overnight in my refrigerator.
           The yeast was not particularly active in this batch - it could have been the
           flour I was using (half wheat, half bread flour), the initial temperature of
           the water, or the condition of the yeast before I used it.  Sometimes, the dough
           will rise so fast that I will have to punch it down after a few hours.  This one
           didn't rise so fast.  Not to worry, the flavor is still there!
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='garlic butter' src='images/pizzas/walkthrough/19 garlic butter.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='garlic butter' src='images/pizzas/walkthrough/19 garlic butter.jpg'>
+        <div class='carousel-caption'>
           Now, I start to get the ingredients ready to go.  To make
           the sauce for this pizza, I simply
           throw some chopped garlic, butter, and black pepper in a small pot and melt it
           over low heat.  Not pictured are the other ingredients - I've grated some
           mozzarella, sliced some tomatoes, and halved some pitted Kalamata olives.  I want
           the ingredients ready to go when I get the dough thrown out on the screen.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='prepare ball' src='images/pizzas/walkthrough/20 prepare ball.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='prepare ball' src='images/pizzas/walkthrough/20 prepare ball.jpg'>
+        <div class='carousel-caption'>
           Now, the ball gets a light sprinkle of flour on top for lubrication.  I pull the
           ball out of the bowl, put the floured side down on the counter, and spread flour
           on the other side, too.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='ufo' src='images/pizzas/walkthrough/21 ufo.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='ufo' src='images/pizzas/walkthrough/21 ufo.jpg'>
+        <div class='carousel-caption'>
           I press out the sides of the dough
           ball with my palms, leaving a hump in the middle.  The result is something
           that looks like a flying saucer.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='smashed' src='images/pizzas/walkthrough/22 smashed.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='smashed' src='images/pizzas/walkthrough/22 smashed.jpg'>
+        <div class='carousel-caption'>
           Now the middle part gets smashed down, and the whole thing gets evened out.  I'm
           using the palms and fingertips of my hands to do the smashing.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='more spread' src='images/pizzas/walkthrough/24 more spread.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='more spread' src='images/pizzas/walkthrough/24 more spread.jpg'>
+        <div class='carousel-caption'>
           Now, to stretch the dough out further, I generously lubricate the bottom of the
           dough with cornmeal and rotate the dough while smashing and stretching it out with
           two hands.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='rolled' src='images/pizzas/walkthrough/25 rolled.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='rolled' src='images/pizzas/walkthrough/25 rolled.jpg'>
+        <div class='carousel-caption'>
           I wanted a thinner dough this time, so I floured the top of it and rolled it
           out with a rolling pin a few times to get it even flatter.  This is the dough
           ready to go on to the pizza screen.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='thickness' src='images/pizzas/walkthrough/26 thickness.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='thickness' src='images/pizzas/walkthrough/26 thickness.jpg'>
+        <div class='carousel-caption'>
           This is how thick the dough is after I'm done - looks like 10 millimeters or so.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='on the screen' src='images/pizzas/walkthrough/27 on the screen.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='on the screen' src='images/pizzas/walkthrough/27 on the screen.jpg'>
+        <div class='carousel-caption'>
           Before doing anything else, the dough goes on the screen.  It might seem obvious,
           but it's very hard to move the dough after putting ingredients on top - so it
           goes on the screen first.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='sauced' src='images/pizzas/walkthrough/28 sauced.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='sauced' src='images/pizzas/walkthrough/28 sauced.jpg'>
+        <div class='carousel-caption'>
           Using a brush, I apply the garlic butter on the dough, being
           sure to go all the way to the edges of the crust.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='cheesed' src='images/pizzas/walkthrough/29 cheesed.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='cheesed' src='images/pizzas/walkthrough/29 cheesed.jpg'>
+        <div class='carousel-caption'>
           It's time for the cheese.  This was about 8 ounces of grated mozzarella
           cheese.  Only a thin layer of
           cheese is necessary.  The crust or sauce should be visible through the cheese.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='olives' src='images/pizzas/walkthrough/30 olives.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='olives' src='images/pizzas/walkthrough/30 olives.jpg'>
+        <div class='carousel-caption'>
           Halved Kalamata olives are added on top. A whole olive is kind of a lot for
           one bite of pizza - it tends to dominate whatever else comes with it.  Also,
           cutting them in half makes them go further - and they are quite expensive.
           A trick to cutting them is to take a handful of them, hold them all down flat
           on a cutting board with one hand, and cut them in half at once
           with a long serrated knife.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='tomatoes' src='images/pizzas/walkthrough/31 tomatoes.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='tomatoes' src='images/pizzas/walkthrough/31 tomatoes.jpg'>
+        <div class='carousel-caption'>
           Continuing on, I add some thinly-sliced vine-ripened tomatoes.  The best tomatoes, of
           course, are the kind you might grow yourself or buy fresh from a farmer or farmers'
           market.  The grocery store tomatoes are, in my opinion, inferior in taste; however,
@@ -303,36 +252,36 @@ title: Pizza Walkthrough Slideshow - A Step-by-step guide - The Ridiculously Tho
           have a beautiful deep red color - and they don't taste
           <em>that</em>
           bad.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='goat' src='images/pizzas/walkthrough/32 goat.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='goat' src='images/pizzas/walkthrough/32 goat.jpg'>
+        <div class='carousel-caption'>
           Now, to round out the flavor, I add some goat cheese.  It is wise to
           use goat cheese in moderation, and to try to avoid putting large chunks on the pizza
           in any given spot.  I like to break it up into very small chunks
           with my fingers when sprinkling it on.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='oven' src='images/pizzas/walkthrough/33 oven.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='oven' src='images/pizzas/walkthrough/33 oven.jpg'>
+        <div class='carousel-caption'>
           Time for the oven! Quickly, I grab the pizza, open the oven door, and put it on the
           middle rack - being careful not to hold the oven door open for too long.
-        </p>
-      </div>
-      <div class='step'>
-        <div class='step_image'>
-          <img alt='done' src='images/pizzas/walkthrough/34 done.jpg'>
         </div>
-        <p>
+      </div>
+      <div class='item'>
+        <img alt='done' src='images/pizzas/walkthrough/34 done.jpg'>
+        <div class='carousel-caption'>
           Awesome!  This pizza turned out fantastic - one of the best yet.
-        </p>
+        </div>
       </div>
     </div>
+    <a class="left carousel-control" href="#walkthrough" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="right carousel-control" href="#walkthrough" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
   </div>
 </div>
