--- a/resume.html
+++ b/resume.html
@@ -12,23 +12,23 @@ title: BillyReisinger.com
   I am passionate about doing excellent work, and I believe that effective and respectful communication is a key component of every successful software team.
 </p>
 <p>
-  I am a strong proponent of
-  <a href='http://en.wikipedia.org/wiki/Test-driven_development'>Test-Driven Development</a>
-  and
+  I am a <strong>strong</strong> believer in
+  <a href='http://en.wikipedia.org/wiki/Test-driven_development'>Test-Driven Development</a>.  I am well versed in 
   <a href='http://agilemanifesto.org/'>Agile Development</a>
   practices, and I
   <a href='https://github.com/unclebilly'>participate actively</a>
   in the open source community.
 </p>
 <p>
-  Lastly, I think that having a sense of humor about stuff helps you not die.
+  Lastly, I think that having a <a href="http://github.com/unclebilly/logpoop">sense of humor</a> about stuff helps you not die.
 </p>
 <h2>Experience</h2>
 <b>Software Architect</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (January 2009 - present)
 <ul>
-  <li>Worked in development team doing a ground-up rewrite of an enterprise web application / message delivery system</li>
-  <li>Developed applications with Ruby, Java, Oracle, JavaScript, and Flex</li>
-  <li>Worked in a devops team to automate server configuration and provisioning using Foreman, PXE Booting, Kickstart, and Puppet</li>
+  <li>Ground-up rewrite of an enterprise web application / message delivery system</li>
+  <li>Developed new tranasctional email, sms, and voice messaging SASS application</li>
+  <li>Developed with Ruby, Java, Oracle, JavaScript</li>
+  <li>Worked in a devops team to automate server configuration and provisioning using Foreman and Puppet</li>
 </ul>
 <b>Senior Web Developer</b>&nbsp;-&nbsp;<a href='http://www.ibsys.com'>Internet Broadcasting Systems</a>, Minneapolis, MN (December, 2005 - December, 2008)
 <ul>
@@ -125,6 +125,7 @@ title: BillyReisinger.com
   Bash,
   SQL,
   PHP,
+  Clojure,
   Actionscript,
   PL/SQL,
   C,
@@ -146,6 +147,7 @@ title: BillyReisinger.com
 <h3>Frameworks</h3>
 <p>
   Ruby on Rails,
+  Node.js,
   Puppet,
   Sinatra,
   Spring,
@@ -155,13 +157,16 @@ title: BillyReisinger.com
   iOS,
   Flex
 </p>
-<h3>Persistence</h3>
+<h3>Persistence and Messaging</h3>
 <p>
   MySQL,
   Oracle,
+  PostgreSQL,
   Sqlite,
   Redis,
-  memcached,
-  PostgreSQL
+  ActiveMQ,
+  Kafka,
+  Neo4j,
+  memcached
 </p>
 </div>
