lots of progress

--- a/index.html
+++ b/index.html
@@ -5,31 +5,7 @@ title: BillyReisinger.com
 <div class="container">
   <div class="row">
     <div class="col-md-4">
-      <h2>Open Source</h2>
-      <ul>
-        <li>
-          <a href="http://github.com/unclebilly/garagio">Garagio</a>
-           - A web application (with custom hardware) to open my garage door
-        </li>
-        <li>
-          <a href="http://github.com/govdelivery/infoblox">Infoblox</a>
-           - a Ruby gem to interact with the Infoblox DNS appliance REST API
-        </li>
-        <li>
-          <a href="http://unclebilly.github.com/oci8_simple/">oci8_simple</a>
-           - A simple ruby library to interact with an Oracle database from the command line.
-        </li>
-        <li>
-          <a href="http://github.com/unclebilly/jash">Jash - JavaScript Shell</a>
-           - A long-dead (but once popular) project to run a JavaScript / CSS shell in your browser.  It worked great in IE5 and 6 and was perfect for those unfortunate souls who needed to debug issues or play with a REPL on those browsers.
-        </li>
-        <li>
-          <a href="http://github.com/unclebilly">Lots more on GitHub...</a>
-        </li>
-      </ul>
-    </div>
-    <div class="col-md-4">
-      <h2>Pizza stuff</h2>
+      <h2>Pizza</h2>
       <p>
         I love to make pizza, and I've put what I've learned about it online for anyone to read.  I also
         keep a list of the pizzas that I've made on this website, along with pictures.
@@ -64,6 +40,35 @@ title: BillyReisinger.com
         </li>
         <li>
           <a href="pizza_mistakes.html">Common Pizza Mistakes</a>
+        </li>
+      </ul>
+    </div>
+     <div class="col-md-4">
+      <h2>Software</h2>
+      <p>
+        I'm a Software Architect at <a href="http://govdelivery.com">GovDelivery</a>.  
+        Here are a few open source projects that
+        I've started:
+      </p>
+      <ul>
+        <li>
+          <a href="http://github.com/unclebilly/garagio">Garagio</a>
+           - A web application (with custom hardware) to open my garage door
+        </li>
+        <li>
+          <a href="http://github.com/govdelivery/infoblox">Infoblox</a>
+           - a Ruby gem to interact with the Infoblox DNS appliance REST API
+        </li>
+        <li>
+          <a href="http://unclebilly.github.com/oci8_simple/">oci8_simple</a>
+           - A simple ruby library to interact with an Oracle database from the command line.
+        </li>
+        <li>
+          <a href="http://github.com/unclebilly/jash">Jash - JavaScript Shell</a>
+           - A long-dead (but once popular) project to run a JavaScript / CSS shell in your browser.  It worked great in IE5 and 6 and was perfect for those unfortunate souls who needed to debug issues or play with a REPL on those browsers.
+        </li>
+        <li>
+          <a href="http://github.com/unclebilly">Lots more on <i class="fa fa-github"></i> GitHub...</a>
         </li>
       </ul>
     </div>
