--- a/music.html
+++ b/music.html
@@ -38,32 +38,7 @@ title: BillyReisinger.com
       <ul>
         <li>
           <h3>Jimmy's Club, 5/11/1998</h3>
-          <ul>
-            <li>
-              <a href='music/CosmicArc/Jimmys 5-11-1998/crowbar.mp3'>crowbar.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Jimmys 5-11-1998/in_case_of_fire.mp3'>in_case_of_fire.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Jimmys 5-11-1998/my_shoes.mp3'>my_shoes.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Jimmys 5-11-1998/nightmare.mp3'>nightmare.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Jimmys 5-11-1998/quasar.mp3'>quasar.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Jimmys 5-11-1998/scotch_and_milk.mp3'>scotch_and_milk.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Jimmys 5-11-1998/what_id_do_for_a_pretty_face.mp3'>what_id_do_for_a_pretty_face.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Jimmys 5-11-1998/youre_really_not_that_interesting_1.mp3'>youre_really_not_that_interesting_1.mp3</a>
-            </li>
-          </ul>
+          <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/58000377&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
         </li>
         <li>
           <h3>Miscellaneous</h3>
