--- a/pizza_index.html
+++ b/pizza_index.html
@@ -1,14 +1,11 @@
 ---
 layout: pizza
-title: The Ridiculously Thorough Guide To Making Your Own Pizza
+title: The Amateur Guide to Making Pizza
 ---
 <div class="container">
   <h2>
-    The Ridiculously Thorough Guide to Making Your Own Pizza
-    <br>
-    <div class='fb-like' data-layout='button_count' data-send='true' data-show-faces='true' data-width='200'></div>
+    The Amateur Guide to Making Pizza
   </h2>
-  <em>A Guide for the Pizza Amateur</em>
   <div class='floatRight webAd'>
     <script>
       google_ad_client = "ca-pub-0406430957368909";
@@ -50,7 +47,7 @@ title: The Ridiculously Thorough Guide To Making Your Own Pizza
     <a href='pizza_mistakes.html'>common mistakes</a>
     people tend to make when cooking pizza at home, or you could check
     out my
-    <a href='pizza_log'>photo gallery</a>,
+    <a href='pizza_log.html'>photo gallery</a>,
     where I keep pictures of pizzas that I've made.
   </p>
 </div>
