--- a/resume.html
+++ b/resume.html
@@ -124,8 +124,8 @@ title: BillyReisinger.com
   Java,
   Bash,
   SQL,
-  PHP,
   Clojure,
+  PHP,
   Actionscript,
   PL/SQL,
   C,
@@ -159,14 +159,15 @@ title: BillyReisinger.com
 </p>
 <h3>Persistence and Messaging</h3>
 <p>
-  MySQL,
   Oracle,
+  Kafka,
+  MySQL,
+  Redis,
   PostgreSQL,
   Sqlite,
-  Redis,
   ActiveMQ,
-  Kafka,
   Neo4j,
-  memcached
+  memcached,
+  Cassandra
 </p>
 </div>
