--- a/pizza.html
+++ b/pizza.html
@@ -7,15 +7,7 @@ title: The Ridiculously Thorough Guide To Making Your Own Pizza
     The Ridiculously Thorough Guide to Making Your Own Pizza
   </h2>
   <em>A Guide for the Pizza Amateur</em>
-  <div class='floatRight webAd'>
-    <script>
-      google_ad_client = "ca-pub-0406430957368909";
-      google_ad_slot = "3030340251";
-      google_ad_width = 300;
-      google_ad_height = 250;
-    </script>
-    <script src='http://pagead2.googlesyndication.com/pagead/show_ads.js' type='text/javascript'></script>
-  </div>
+  {% include responsive_ad.html %}
   <p>
     There are a few "secrets of the trade" in making
     your own pizza; once you know them, it is not hard to
@@ -23,17 +15,6 @@ title: The Ridiculously Thorough Guide To Making Your Own Pizza
     In fact, after you make it a few times you'll wonder
     why I made such a big deal out of it.
   </p>
-  <div class='mobileAd'>
-    <script>
-      window.googleAfmcRequest = {
-                    client: 'ca-mb-pub-0406430957368909',
-                    format: '320x50_mb',
-                    output: 'html',
-                    slotname: '1119162397',
-      };
-    </script>
-    <script src='http://pagead2.googlesyndication.com/pagead/show_afmc_ads.js' type='text/javascript'></script>
-  </div>
   <p>
     The instructions below are for making a pizza
     in the traditional American pizzeria style.  The intended audience for this guide
@@ -64,64 +45,63 @@ title: The Ridiculously Thorough Guide To Making Your Own Pizza
   </ol>
   <h3><a name='reqs'></a>Tools you need before you start
   </h3>
-  <ul>
-    <li>
-      You will need a
-      <b>large, flat surface</b>
-      that you can get messy, and you will
-      need a large (large!) bowl. Also, you
-      <em>will</em>
-      make
-      a mess the first few times you do this.
-    </li>
-    <li>
-      Making pizza is much easier with a
-      <b>pizza paddle</b>.
-      With a paddle, you can get your
-      pizza in and out of the oven easily without burning yourself or losing your pizza.  Also,
-      it makes the job of putting a topped, raw pizza onto a pizza stone much easier.
-    </li>
-    <li>
-      With my pizzas, I prefer to use a
-      <a href='http://www.amazon.com/s/ref=nb_sb_noss_1?url=search-alias%3Daps&amp;field-keywords=pizza+screen' title='Amazon.com sells many different kinds of pizza screens'>
-        pizza screen
-      </a>.
-      There is no question that a pizza cooked on a stone comes out lighter, springier, and
-      with a generally better crust.
-      The reason I prefer a screen is that pizza stones are not amateur-friendly. Here's why:
-      <ol>
-        <li>
-          A screen won't shatter if I drop it on the floor
-          or heat it improperly, like a pizza stone.
-        </li>
-        <li>
-          When I accidentally get certain foods on a stone - such as pepperoni - the stone will smoke and
-          smell bad every time I use it again.
-        </li>
-        <li>
-          It is tough to master the maneuver necessary for getting a topped, raw pizza off
-          of a paddle and onto a stone.  The first few times I did it, I ended up flinging toppings all over
-          the place and stretching out the dough on accident.
-        </li>
-        <li>
-          A "good screen" is an order of magnitude cheaper than a "good stone." Of course, I
-          could use unglazed ceramic tiles (which are cheap), but because they don't come in
-          a size big enough for a good pizza, I'd have to put a few of them together.  That's a
-          bad situation because they tend to move around when I try to put a topped pizza
-          on them.
-        </li>
-        <li>
-          With the
-          <a href='/pizza_dough.html'>pizza dough</a>
-          recipe that I use, nothing sticks to the screen (as long as I
-          don't have any big holes in my dough).
-        </li>
-      </ol>
-      <br>
-      I actually have a stone and I use it at home on occasion.  I would not
-      recommend a stone to somebody when they are making a pizza for the first time
-      and they had never used a stone before.  If that sounds like you, consider buying a pizza screen.
-    </li>
+  <p>
+    You will need a
+    <b>large, flat surface</b>
+    that you can get messy, and you will
+    need a large (large!) bowl. Also, you
+    <em>will</em>
+    make
+    a mess the first few times you do this.
+  </p>
+  <p>
+    Making pizza is much easier with a
+    <b>pizza paddle</b>.
+    With a paddle, you can get your
+    pizza in and out of the oven easily without burning yourself or losing your pizza.  Also,
+    it makes the job of putting a topped, raw pizza onto a pizza stone much easier.
+  </p>
+  <p>
+    With my pizzas, I prefer to use a
+    <b><a href='http://www.amazon.com/s/ref=nb_sb_noss_1?url=search-alias%3Daps&amp;field-keywords=pizza+screen' title='Amazon.com sells many different kinds of pizza screens'>
+      pizza screen</a></b>.
+    There is no question that a pizza cooked on a stone comes out lighter, springier, and
+    with a generally better crust.
+    The reason I prefer a screen is that pizza stones are not amateur-friendly. Here's why:
+    <ul>
+      <li>
+        A screen won't shatter if I drop it on the floor
+        or heat it improperly, like a pizza stone.
+      </li>
+      <li>
+        When I accidentally get certain foods on a stone - such as pepperoni - the stone will smoke and
+        smell bad every time I use it again.
+      </li>
+      <li>
+        It is tough to master the maneuver necessary for getting a topped, raw pizza off
+        of a paddle and onto a stone.  The first few times I did it, I ended up flinging toppings all over
+        the place and stretching out the dough on accident.
+      </li>
+      <li>
+        A good screen is cheaper than a good stone. Of course, I
+        could use unglazed ceramic tiles (which are cheap), but because they don't come in
+        a size big enough for a good pizza, I'd have to put a few of them together.  That can be tricky,  because they tend to move around when I try to put a topped pizza
+        on them.
+      </li>
+      <li>
+        With the
+        <a href='/pizza_dough.html'>pizza dough</a>
+        recipe that I use, nothing sticks to the screen (as long as I
+        don't have any big holes in my dough).
+      </li>
+    </ul>
+  </p>
+  <p>
+    I actually have a stone and I use it at home on occasion.  I would not
+    recommend a stone to somebody when they are making a pizza for the first time
+    and they had never used a stone before.  If that sounds like you, consider buying a pizza screen. 
+    In a pinch, you can <a href="pizza_faq.html#i_dont_have">use something else</a>. 
+  </p>
   </ul>
   <h3><a name='make'></a>Make the dough
   </h3>
@@ -239,22 +219,14 @@ title: The Ridiculously Thorough Guide To Making Your Own Pizza
       </ul>
     </li>
   </ol>
+  {% include responsive_ad.html %}
   <h3><a name='top'></a>Top it and cook it
   </h3>
-  <div class='floatLeft webAd'>
-    <script>
-      google_ad_client = "ca-pub-0406430957368909";
-      google_ad_slot = "5625459697";
-      google_ad_width = 250;
-      google_ad_height = 250;
-    </script>
-    <script src='http://pagead2.googlesyndication.com/pagead/show_ads.js' type='text/javascript'></script>
-  </div>
   <p>
-    <span style='font-weight: bolder'>
+    <strong>
       Before you top your pizza, make sure that you have placed
       the dough on top of the screen
-    </span>
+    </strong>
     or stone.  You'll never get it on if you put toppings on first! Even if you
     have preheated your stone, you should take it out of the oven and put the dough on top before you top
     it. [Note: if you happen to have one of those huge pizza paddles, you can top the dough on your counter top
