contact page, music rearrangin

--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 layout: default
 title: BillyReisinger.com
 ---
+<div class="jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-9">
+        <p>
+          I'm a Software Engineer specializing in web application development and system operations.  I like to make pizza at home.  I enjoy tinkering
+          with electronics.  I'm a dad and husband. I'm a classically-trained composer and amateur musician.  
+        </p>
+      </div>
+      <div class="col-md-3">
+        <img class="gravatar" src="http://1.gravatar.com/avatar/a570bf6a4b63ab79120459bb82c2017c?size=150px">
+      </div>
+    </div>
+  </div>
+</div>
 <div class="container">
   <div class="row">
     <div class="col-md-4">
