--- a/music.html
+++ b/music.html
@@ -3,130 +3,46 @@ layout: default
 title: BillyReisinger.com
 ---
 <div class='container'>
-  <ul>
-    <li>
-      <h2>Compositions</h2>
-      <ul>
-        <li>
-          <h3>Theme From a Lonely Planet (for Symphony Orchestra) - 2001</h3>
-          <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/166442190&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-        </li>
-        <li>
-          <h3>Pacific Dream Sequence (2001)</h3>
-          <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/49731296&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-        </li>
-        <li>
-          <h3>Rondo for Rodent and Computer (2003)</h3>
-          <ul>
-            <li>
-              <a href='music/rfrac/rfrac.mov'>rfrac.mov</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <h3>Streetscapes for Solo Piano (2003)</h3>
-          <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/49733540&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-        </li>
-        <li>
-          <h3>String Quartet (2000)</h3>
-          <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/49734092&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-        </li>
-      </ul>
-    </li>
-    <li>
-      <h2>Cosmic Arc</h2>
-      <ul>
-        <li>
-          <h3>Jimmy's Club, 5/11/1998</h3>
-          <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/58000377&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-        </li>
-        <li>
-          <h3>Miscellaneous</h3>
-          <ul>
-            <li>
-              <a href='music/CosmicArc/Misc/crowbar.mp3'>crowbar.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Misc/incaseoffire.mp3'>incaseoffire.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Misc/lemons.mp3'>lemons.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Misc/lemons_cac.mp3'>lemons_cac.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Misc/mymanisgone.mp3'>mymanisgone.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Misc/restless.mp3'>restless.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Misc/sharleena.mp3'>sharleena.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Misc/theskyiscrying.mp3'>theskyiscrying.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Misc/voodoo.mp3'>voodoo.mp3</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <h3>Why Bother?</h3>
-          <ul>
-            <li>
-              <a href='music/CosmicArc/Why_Bother/crowbar.mp3'>crowbar.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Why_Bother/in_case_of_fire.mp3'>in_case_of_fire.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Why_Bother/prelude.mp3'>prelude.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Why_Bother/quasar.mp3'>quasar.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Why_Bother/scotch_and_milk.mp3'>scotch_and_milk.mp3</a>
-            </li>
-            <li>
-              <a href='music/CosmicArc/Why_Bother/untitled.mp3'>untitled.mp3</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li>
-      <h2>Uphill Driver</h2>
-      <ul>
-        <li>
-          <h3>Self-titled album</h3>
-          <ul>
-            <li>
-              <a href='music/UphillDriver/BrokenDown.mp3'>BrokenDown.mp3</a>
-            </li>
-            <li>
-              <a href='music/UphillDriver/DrinkforaDream.mp3'>DrinkforaDream.mp3</a>
-            </li>
-            <li>
-              <a href='music/UphillDriver/FallOut.mp3'>FallOut.mp3</a>
-            </li>
-            <li>
-              <a href='music/UphillDriver/OnABend.mp3'>OnABend.mp3</a>
-            </li>
-            <li>
-              <a href='music/UphillDriver/she_told_me_too.mp3'>she_told_me_too.mp3</a>
-            </li>
-            <li>
-              <a href='music/UphillDriver/TheWorstWay.mp3'>TheWorstWay.mp3</a>
-            </li>
-            <li>
-              <a href='music/UphillDriver/untitled.mp3'>untitled.mp3</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-  </ul>
+  <div class='col-md-4'>
+  
+    <h3>Compositions</h3>
+    <p>Theme From a Lonely Planet (for Symphony Orchestra) - 3001</p>
+    <p>Pacific Dream Sequence (3001)</p>
+    <p>Rondo for Rodent and Computer (3003)</p>
+    <a href='music/rfrac/rfrac.mov'>rfrac.mov</a>
+    <p>Streetscapes for Solo Piano (3003)</p>
+    <p>String Quartet (3000)</p>
+  </div>
+  <div class="col-md-4">
+    <h3>Cosmic Arc</h3>
+    <p>Jimmy's Club, 5/11/1998</p>
+    <p>Miscellaneous</p>
+    <a href='music/CosmicArc/Misc/crowbar.mp3'>crowbar.mp3</a>
+    <a href='music/CosmicArc/Misc/incaseoffire.mp3'>incaseoffire.mp3</a>
+    <a href='music/CosmicArc/Misc/lemons.mp3'>lemons.mp3</a>
+    <a href='music/CosmicArc/Misc/lemons_cac.mp3'>lemons_cac.mp3</a>
+    <a href='music/CosmicArc/Misc/mymanisgone.mp3'>mymanisgone.mp3</a>
+    <a href='music/CosmicArc/Misc/restless.mp3'>restless.mp3</a>
+    <a href='music/CosmicArc/Misc/sharleena.mp3'>sharleena.mp3</a>
+    <a href='music/CosmicArc/Misc/theskyiscrying.mp3'>theskyiscrying.mp3</a>
+    <a href='music/CosmicArc/Misc/voodoo.mp3'>voodoo.mp3</a>
+    <p>Why Bother?</p>
+    <a href='music/CosmicArc/Why_Bother/crowbar.mp3'>crowbar.mp3</a>
+    <a href='music/CosmicArc/Why_Bother/in_case_of_fire.mp3'>in_case_of_fire.mp3</a>
+    <a href='music/CosmicArc/Why_Bother/prelude.mp3'>prelude.mp3</a>
+    <a href='music/CosmicArc/Why_Bother/quasar.mp3'>quasar.mp3</a>
+    <a href='music/CosmicArc/Why_Bother/scotch_and_milk.mp3'>scotch_and_milk.mp3</a>
+    <a href='music/CosmicArc/Why_Bother/untitled.mp3'>untitled.mp3</a>
+  </div>
+  <div class="col-md-4">
+    <h3>Uphill Driver</h3>
+    <p>Self-titled album</p>
+    <a href='music/UphillDriver/BrokenDown.mp3'>BrokenDown.mp3</a>
+    <a href='music/UphillDriver/DrinkforaDream.mp3'>DrinkforaDream.mp3</a>
+    <a href='music/UphillDriver/FallOut.mp3'>FallOut.mp3</a>
+    <a href='music/UphillDriver/OnABend.mp3'>OnABend.mp3</a>
+    <a href='music/UphillDriver/she_told_me_too.mp3'>she_told_me_too.mp3</a>
+    <a href='music/UphillDriver/TheWorstWay.mp3'>TheWorstWay.mp3</a>
+    <a href='music/UphillDriver/untitled.mp3'>untitled.mp3</a>
+  </div>
 </div>
